免責事項とか整備

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </article>
     <footer class="text-dimmed text-center mt-5">
         <p>本ウェブサイトはDEATH NOTEおよび関係者各位とは一切関係の無い個人による非公式のジョークサイトです。</p>
-        <p>本サイトをご利用頂いたことによる損害・損失等につきまして、作者は一切の責任を負いかねます。</p>
+        <p>本リポジトリはジョーク目的であり、実在の人物や団体、およびそれに準ずる者に対する侮辱や誹謗中傷、名誉毀損等の攻撃を意図するものではありません。<br>本サイトをご利用頂いたことによる損害・損失等につきまして、作者は一切の責任を負いかねます。</p>
         <p>怒られたら公開を停止します。</p>
     </footer>
     
